--- a/app/src/main/res/layout/fragment_main_media.xml
+++ b/app/src/main/res/layout/fragment_main_media.xml
@@ -1,59 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:filterTouchesWhenObscured="true">
+    android:layout_height="match_parent">
 
-    <LinearLayout
-        android:id="@+id/media_container"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top"
-        android:layout_marginTop="6dp"
-        android:gravity="top"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:filterTouchesWhenObscured="true">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/add_media_hint"
+        <LinearLayout
+            android:id="@+id/media_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="0dp"
+            android:layout_gravity="top"
+            android:layout_marginTop="6dp"
+            android:gravity="top"
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tv_welcome"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
-                android:layout_marginTop="100dp"
-                android:gravity="center"
-                android:text="@string/title_welcome"
-                android:textColor="@color/c23_medium_grey"
-                android:textFontWeight="700"
-                android:textSize="48sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:targetApi="p" />
+        </LinearLayout>
+    </ScrollView>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
-                android:layout_marginTop="@dimen/activity_vertical_margin"
-                android:gravity="center"
-                android:text="@string/tap_to_add"
-                android:textColor="@color/c23_medium_grey"
-                android:textFontWeight="700"
-                android:textSize="24sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_welcome"
-                tools:targetApi="p" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/add_media_hint"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/tv_welcome"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="100dp"
+            android:gravity="center"
+            android:text="@string/title_welcome"
+            android:textColor="@color/c23_medium_grey"
+            android:textFontWeight="700"
+            android:textSize="48sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:targetApi="p" />
 
-    </LinearLayout>
-</ScrollView>
+        <TextView
+            android:id="@+id/tv_welcome_descr"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:gravity="center"
+            android:text="@string/tap_to_add"
+            android:textColor="@color/c23_medium_grey"
+            android:textFontWeight="700"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_welcome"
+            tools:targetApi="p" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/tv_welcome_descr"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="30dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="50dp"
+            android:scaleType="fitEnd"
+            app:tint="@color/c23_medium_grey"
+            app:srcCompat="@drawable/welcome_arrow"
+            android:contentDescription="@string/title_welcome" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</FrameLayout>
