--- a/app/src/main/res/drawable/bottom_nav_background.xml
+++ b/app/src/main/res/drawable/bottom_nav_background.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <solid android:color="@color/colorBottomNavbar" />
-            <corners android:radius="16dp" />
+<!--            <corners android:radius="16dp" />-->
         </shape>
     </item>
     <item android:top="16dp">
