--- a/app/src/main/res/layout/fragment_main_media.xml
+++ b/app/src/main/res/layout/fragment_main_media.xml
@@ -49,7 +49,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
+            android:layout_marginStart="50dp"
             android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:layout_marginEnd="50dp"
             android:gravity="center"
             android:text="@string/tap_to_add"
             android:textColor="@color/c23_medium_grey"
@@ -64,16 +66,18 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/tv_welcome_descr"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="50dp"
+            android:layout_marginBottom="40dp"
+            android:contentDescription="@string/title_welcome"
+            android:scaleType="fitEnd"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="30dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="50dp"
-            android:scaleType="fitEnd"
-            app:tint="@color/c23_medium_grey"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_welcome_descr"
             app:srcCompat="@drawable/welcome_arrow"
-            android:contentDescription="@string/title_welcome" />
+            app:tint="@color/c23_medium_grey" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
