--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,7 +46,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/current_folder"
                 android:layout_width="match_parent"
-                android:layout_height="20dp"
+                android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                 android:layout_marginVertical="@dimen/activity_vertical_margin"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -55,8 +55,8 @@
 
                 <ImageView
                     android:id="@+id/current_folder_icon"
-                    android:layout_width="16dp"
-                    android:layout_height="16dp"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -66,40 +66,37 @@
                     android:id="@+id/current_folder_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginBottom="4dp"
-                    tools:text="folder name"
+                    android:layout_marginStart="16dp"
+                    android:textSize="20sp"
+                    app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@id/current_folder_icon"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    tools:text="Folder Name" />
 
                 <TextView
                     android:id="@+id/current_folder_count"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="8dp"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
                     android:background="@drawable/pill"
                     tools:text="1"
                     android:gravity="center"
-                    android:paddingStart="8dp"
-                    android:paddingEnd="8dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/current_folder_name"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/upload_edit_button"
-                    style="@style/Widget.Material3.Button.TextButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="40dp"
-                    android:paddingEnd="0dp"
-                    android:text="@string/edit"
-                    app:icon="@drawable/ic_low_priority"
-                    app:iconGravity="textStart"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:ignore="RtlSymmetry" />
+                    app:layout_constraintTop_toTopOf="parent" />
+
+<!--                <com.google.android.material.button.MaterialButton-->
+<!--                    android:id="@+id/upload_edit_button"-->
+<!--                    style="@style/Widget.Material3.Button.TextButton"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="40dp"-->
+<!--                    android:paddingEnd="0dp"-->
+<!--                    android:text="@string/edit"-->
+<!--                    app:icon="@drawable/ic_low_priority"-->
+<!--                    app:iconGravity="textStart"-->
+<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                    app:layout_constraintEnd_toEndOf="parent"-->
+<!--                    app:layout_constraintTop_toTopOf="parent"-->
+<!--                    tools:ignore="RtlSymmetry" />-->
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -108,6 +105,7 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginBottom="2dp"
+                android:layout_marginTop="2dp"
                 app:layout_constraintBottom_toTopOf="@id/bottom_bar"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -140,10 +138,10 @@
                         android:backgroundTint="@color/colorBottomNavbar"
                         android:paddingTop="0dp"
                         android:paddingBottom="0dp"
-                        app:icon="@drawable/ic_home"
+                        app:icon="@drawable/outline_perm_media_24"
                         app:iconGravity="textStart"
                         app:iconPadding="0dp"
-                        app:iconSize="24dp"
+                        app:iconSize="36dp"
                         app:iconTint="@color/colorOnBottomNavbar"
                         app:rippleColor="@color/c23_light_grey" />
 
@@ -153,7 +151,6 @@
                         android:layout_height="wrap_content"
                         android:layout_below="@id/my_media_button"
                         android:layout_centerHorizontal="true"
-                        android:layout_marginTop="-4dp"
                         android:clickable="true"
                         android:focusable="false"
                         android:padding="0dp"
@@ -205,7 +202,7 @@
                         app:icon="@drawable/ic_settings"
                         app:iconGravity="textStart"
                         app:iconPadding="0dp"
-                        app:iconSize="24dp"
+                        app:iconSize="36dp"
                         app:iconTint="@color/colorOnBottomNavbar"
                         app:rippleColor="@color/c23_light_grey" />
 
@@ -215,7 +212,6 @@
                         android:layout_height="wrap_content"
                         android:layout_below="@id/settings_button"
                         android:layout_centerHorizontal="true"
-                        android:layout_marginTop="-4dp"
                         android:clickable="true"
                         android:focusable="false"
                         android:padding="0dp"
@@ -255,7 +251,7 @@
                 android:layout_marginStart="24dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/navigation_drawer_header" />
+                app:layout_constraintTop_toBottomOf="@id/current_space_name" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/spaces"
