--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,23 +20,24 @@
         <item name="bottomSheetDialogTheme">@style/AppBottomSheetTheme</item>
         <item name="alertDialogTheme">@style/AlertDialogTheme</item>
         <item name="materialAlertDialogTheme">@style/AlertMaterialDialogTheme</item>
+        <item name="switchPreferenceCompatStyle">@style/Foo</item>
     </style>
 
 
-    <style name="MainTheme.NoActionBar" parent="Theme.Material3.DayNight.NoActionBar">
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorOnPrimary">@color/colorOnPrimary</item>
-        <item name="android:colorBackground">@color/colorBackground</item>
-        <item name="android:textColor">@color/colorOnBackground</item>
-        <item name="android:statusBarColor">@color/colorBackground</item>
-        <item name="android:navigationBarColor">@color/colorBottomNavbar</item>
-        <item name="android:windowLightStatusBar" tools:targetApi="m">@bool/dayMode</item>
-        <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">@bool/dayMode</item>
-        <item name="navigationViewStyle">@style/NavigationViewStyle</item>
-        <item name="appBarLayoutStyle">@style/AppBarStyle</item>
-        <item name="android:textViewStyle">@style/OATextViewStyle</item>
-    </style>
+<!--    <style name="MainTheme.NoActionBar" parent="Theme.Material3.DayNight.NoActionBar">-->
+<!--        <item name="colorPrimary">@color/colorPrimary</item>-->
+<!--        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>-->
+<!--        <item name="colorOnPrimary">@color/colorOnPrimary</item>-->
+<!--        <item name="android:colorBackground">@color/colorBackground</item>-->
+<!--        <item name="android:textColor">@color/colorOnBackground</item>-->
+<!--        <item name="android:statusBarColor">@color/colorBackground</item>-->
+<!--        <item name="android:navigationBarColor">@color/colorBottomNavbar</item>-->
+<!--        <item name="android:windowLightStatusBar" tools:targetApi="m">@bool/dayMode</item>-->
+<!--        <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">@bool/dayMode</item>-->
+<!--        <item name="navigationViewStyle">@style/NavigationViewStyle</item>-->
+<!--        <item name="appBarLayoutStyle">@style/AppBarStyle</item>-->
+<!--        <item name="android:textViewStyle">@style/OATextViewStyle</item>-->
+<!--    </style>-->
 
     <style name="AppBottomSheetTheme" parent="ThemeOverlay.Material3.DayNight.BottomSheetDialog">
         <item name="buttonStyle">@style/OAButtonStyle</item>
@@ -54,6 +55,13 @@
     </style>
 
     <!-- widgets / dialogs / alerts -->
+
+    <style name="Foo" parent="Preference.SwitchPreferenceCompat">
+        <item name="android:textAppearance">@null</item>
+        <item name="android:textColor">@color/red</item>
+        <item name="android:textColorSecondary">@color/red</item>
+        <item name="android:textSize">12sp</item>
+    </style>
 
     <style name="AppBarStyle" parent="Widget.Material3.AppBarLayout">
         <item name="android:background">@color/colorBackground</item>
