--- a/app/src/main/res/layout/fragment_space_setup.xml
+++ b/app/src/main/res/layout/fragment_space_setup.xml
@@ -108,164 +108,164 @@
 
         </com.google.android.material.card.MaterialCardView>
 
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/internet_archive"
-            android:layout_width="match_parent"
-            android:layout_height="120dp"
-            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
-            android:layout_marginVertical="@dimen/activity_vertical_margin"
-            android:background="?attr/selectableItemBackground"
-            android:clickable="true"
-            android:focusable="true"
-            app:cardBackgroundColor="@color/colorBackground"
-            app:cardCornerRadius="@dimen/activity_horizontal_margin"
-            app:cardElevation="0dp"
-            app:strokeColor="@color/colorOnBackground"
-            app:strokeWidth="@dimen/border_width">
+<!--        <com.google.android.material.card.MaterialCardView-->
+<!--            android:id="@+id/internet_archive"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="120dp"-->
+<!--            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"-->
+<!--            android:layout_marginVertical="@dimen/activity_vertical_margin"-->
+<!--            android:background="?attr/selectableItemBackground"-->
+<!--            android:clickable="true"-->
+<!--            android:focusable="true"-->
+<!--            app:cardBackgroundColor="@color/colorBackground"-->
+<!--            app:cardCornerRadius="@dimen/activity_horizontal_margin"-->
+<!--            app:cardElevation="0dp"-->
+<!--            app:strokeColor="@color/colorOnBackground"-->
+<!--            app:strokeWidth="@dimen/border_width">-->
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
-                android:orientation="horizontal">
+<!--            <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_gravity="center_vertical"-->
+<!--                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"-->
+<!--                android:orientation="horizontal">-->
 
-                <ImageView
-                    android:id="@+id/icon_internet_archive"
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
-                    android:importantForAccessibility="no"
-                    android:padding="2dp"
-                    android:src="@drawable/ic_internet_archive"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+<!--                <ImageView-->
+<!--                    android:id="@+id/icon_internet_archive"-->
+<!--                    android:layout_width="32dp"-->
+<!--                    android:layout_height="32dp"-->
+<!--                    android:importantForAccessibility="no"-->
+<!--                    android:padding="2dp"-->
+<!--                    android:src="@drawable/ic_internet_archive"-->
+<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                    app:layout_constraintStart_toStartOf="parent"-->
+<!--                    app:layout_constraintTop_toTopOf="parent" />-->
 
-                <LinearLayout
-                    android:id="@+id/internet_archive_texts"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:paddingStart="8dp"
-                    android:paddingEnd="8dp"
-                    app:layout_constraintEnd_toStartOf="@id/icon_next_internet_archive"
-                    app:layout_constraintStart_toEndOf="@id/icon_internet_archive"
-                    app:layout_constraintTop_toTopOf="parent">
+<!--                <LinearLayout-->
+<!--                    android:id="@+id/internet_archive_texts"-->
+<!--                    android:layout_width="0dp"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:orientation="vertical"-->
+<!--                    android:paddingStart="8dp"-->
+<!--                    android:paddingEnd="8dp"-->
+<!--                    app:layout_constraintEnd_toStartOf="@id/icon_next_internet_archive"-->
+<!--                    app:layout_constraintStart_toEndOf="@id/icon_internet_archive"-->
+<!--                    app:layout_constraintTop_toTopOf="parent">-->
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/internet_archive"
-                        android:textSize="20sp"
-                        android:textStyle="bold" />
+<!--                    <TextView-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:text="@string/internet_archive"-->
+<!--                        android:textSize="20sp"-->
+<!--                        android:textStyle="bold" />-->
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/upload_to_the_internet_archive"
-                        android:textSize="14sp" />
+<!--                    <TextView-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:text="@string/upload_to_the_internet_archive"-->
+<!--                        android:textSize="14sp" />-->
 
-                </LinearLayout>
+<!--                </LinearLayout>-->
 
-                <ImageView
-                    android:id="@+id/icon_next_internet_archive"
-                    android:layout_width="18dp"
-                    android:layout_height="18dp"
-                    android:src="@drawable/onboarding23_arrow_right"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/internet_archive_texts"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:tint="@color/colorSpaceSetupProgressOn"
-                    android:importantForAccessibility="no" />
+<!--                <ImageView-->
+<!--                    android:id="@+id/icon_next_internet_archive"-->
+<!--                    android:layout_width="18dp"-->
+<!--                    android:layout_height="18dp"-->
+<!--                    android:src="@drawable/onboarding23_arrow_right"-->
+<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                    app:layout_constraintEnd_toEndOf="parent"-->
+<!--                    app:layout_constraintStart_toEndOf="@id/internet_archive_texts"-->
+<!--                    app:layout_constraintTop_toTopOf="parent"-->
+<!--                    app:tint="@color/colorSpaceSetupProgressOn"-->
+<!--                    android:importantForAccessibility="no" />-->
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+<!--            </androidx.constraintlayout.widget.ConstraintLayout>-->
 
-        </com.google.android.material.card.MaterialCardView>
+<!--        </com.google.android.material.card.MaterialCardView>-->
 
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/gdrive"
-            android:layout_width="match_parent"
-            android:layout_height="120dp"
-            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
-            android:layout_marginVertical="@dimen/activity_vertical_margin"
-            android:background="?attr/selectableItemBackground"
-            android:clickable="true"
-            android:focusable="true"
-            app:cardBackgroundColor="@color/colorBackground"
-            app:cardCornerRadius="@dimen/activity_horizontal_margin"
-            app:cardElevation="0dp"
-            app:strokeColor="@color/colorOnBackground"
-            app:strokeWidth="@dimen/border_width">
+<!--        <com.google.android.material.card.MaterialCardView-->
+<!--            android:id="@+id/gdrive"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="120dp"-->
+<!--            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"-->
+<!--            android:layout_marginVertical="@dimen/activity_vertical_margin"-->
+<!--            android:background="?attr/selectableItemBackground"-->
+<!--            android:clickable="true"-->
+<!--            android:focusable="true"-->
+<!--            app:cardBackgroundColor="@color/colorBackground"-->
+<!--            app:cardCornerRadius="@dimen/activity_horizontal_margin"-->
+<!--            app:cardElevation="0dp"-->
+<!--            app:strokeColor="@color/colorOnBackground"-->
+<!--            app:strokeWidth="@dimen/border_width">-->
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
-                android:orientation="horizontal">
+<!--            <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_gravity="center_vertical"-->
+<!--                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"-->
+<!--                android:orientation="horizontal">-->
 
-                <ImageView
-                    android:id="@+id/icon_gdrive"
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
-                    android:importantForAccessibility="no"
-                    android:padding="2dp"
-                    android:src="@drawable/logo_drive_2020q4_color_2x_web_64dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+<!--                <ImageView-->
+<!--                    android:id="@+id/icon_gdrive"-->
+<!--                    android:layout_width="32dp"-->
+<!--                    android:layout_height="32dp"-->
+<!--                    android:importantForAccessibility="no"-->
+<!--                    android:padding="2dp"-->
+<!--                    android:src="@drawable/logo_drive_2020q4_color_2x_web_64dp"-->
+<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                    app:layout_constraintStart_toStartOf="parent"-->
+<!--                    app:layout_constraintTop_toTopOf="parent" />-->
 
-                <LinearLayout
-                    android:id="@+id/gdrive_texts"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:paddingStart="8dp"
-                    android:paddingEnd="8dp"
-                    app:layout_constraintEnd_toStartOf="@id/icon_next_gdrive"
-                    app:layout_constraintStart_toEndOf="@id/icon_gdrive"
-                    app:layout_constraintTop_toTopOf="parent">
+<!--                <LinearLayout-->
+<!--                    android:id="@+id/gdrive_texts"-->
+<!--                    android:layout_width="0dp"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:orientation="vertical"-->
+<!--                    android:paddingStart="8dp"-->
+<!--                    android:paddingEnd="8dp"-->
+<!--                    app:layout_constraintEnd_toStartOf="@id/icon_next_gdrive"-->
+<!--                    app:layout_constraintStart_toEndOf="@id/icon_gdrive"-->
+<!--                    app:layout_constraintTop_toTopOf="parent">-->
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/gdrive_tm"
-                        android:textSize="20sp"
-                        android:textStyle="bold" />
+<!--                    <TextView-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:text="@string/gdrive_tm"-->
+<!--                        android:textSize="20sp"-->
+<!--                        android:textStyle="bold" />-->
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/upload_to_gdrive"
-                        android:textSize="14sp" />
+<!--                    <TextView-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:text="@string/upload_to_gdrive"-->
+<!--                        android:textSize="14sp" />-->
 
-                </LinearLayout>
+<!--                </LinearLayout>-->
 
-                <ImageView
-                    android:id="@+id/icon_next_gdrive"
-                    android:layout_width="18dp"
-                    android:layout_height="18dp"
-                    android:src="@drawable/onboarding23_arrow_right"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/gdrive_texts"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:tint="@color/colorSpaceSetupProgressOn"
-                    android:importantForAccessibility="no" />
+<!--                <ImageView-->
+<!--                    android:id="@+id/icon_next_gdrive"-->
+<!--                    android:layout_width="18dp"-->
+<!--                    android:layout_height="18dp"-->
+<!--                    android:src="@drawable/onboarding23_arrow_right"-->
+<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                    app:layout_constraintEnd_toEndOf="parent"-->
+<!--                    app:layout_constraintStart_toEndOf="@id/gdrive_texts"-->
+<!--                    app:layout_constraintTop_toTopOf="parent"-->
+<!--                    app:tint="@color/colorSpaceSetupProgressOn"-->
+<!--                    android:importantForAccessibility="no" />-->
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+<!--            </androidx.constraintlayout.widget.ConstraintLayout>-->
 
-        </com.google.android.material.card.MaterialCardView>
+<!--        </com.google.android.material.card.MaterialCardView>-->
 
-        <Button
-            android:id="@+id/skip_for_now_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="20dp"
-            android:background="@android:color/transparent"
-            android:text="Skip for now" />
+<!--        <Button-->
+<!--            android:id="@+id/skip_for_now_button"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"-->
+<!--            android:layout_marginTop="20dp"-->
+<!--            android:background="@android:color/transparent"-->
+<!--            android:text="Skip for now" />-->
 
 
     </LinearLayout>
