--- a/app/src/main/res/xml/prefs_general.xml
+++ b/app/src/main/res/xml/prefs_general.xml
@@ -18,47 +18,47 @@
 
     </PreferenceCategory>
 
-    <PreferenceCategory
-        app:iconSpaceReserved="false"
-        app:layout="@layout/prefs_title"
-        app:title="@string/metadata">
+<!--    <PreferenceCategory-->
+<!--        app:iconSpaceReserved="false"-->
+<!--        app:layout="@layout/prefs_title"-->
+<!--        app:title="@string/metadata">-->
 
-        <Preference
-            app:allowDividerAbove="false"
-            app:allowDividerBelow="false"
-            app:iconSpaceReserved="false"
-            app:key="proof_mode"
-            app:title="@string/proofmode"
-            app:singleLineTitle="false" />
+<!--        <Preference-->
+<!--            app:allowDividerAbove="false"-->
+<!--            app:allowDividerBelow="false"-->
+<!--            app:iconSpaceReserved="false"-->
+<!--            app:key="proof_mode"-->
+<!--            app:title="@string/proofmode"-->
+<!--            app:singleLineTitle="false" />-->
 
-    </PreferenceCategory>
+<!--    </PreferenceCategory>-->
 
-    <PreferenceCategory
-        app:iconSpaceReserved="false"
-        app:layout="@layout/prefs_title"
-        app:title="@string/security">
+<!--    <PreferenceCategory-->
+<!--        app:iconSpaceReserved="false"-->
+<!--        app:layout="@layout/prefs_title"-->
+<!--        app:title="@string/security">-->
 
-        <SwitchPreferenceCompat
-            app:allowDividerAbove="false"
-            app:allowDividerBelow="false"
-            app:iconSpaceReserved="false"
-            app:key="use_tor"
-            app:defaultValue="false"
-            app:title="@string/prefs_use_tor_title"
-            app:singleLineTitle="false"
-            app:summary="@string/prefs_use_tor_summary" />
+<!--        <SwitchPreferenceCompat-->
+<!--            app:allowDividerAbove="false"-->
+<!--            app:allowDividerBelow="false"-->
+<!--            app:iconSpaceReserved="false"-->
+<!--            app:key="use_tor"-->
+<!--            app:defaultValue="false"-->
+<!--            app:title="@string/prefs_use_tor_title"-->
+<!--            app:singleLineTitle="false"-->
+<!--            app:summary="@string/prefs_use_tor_summary" />-->
 
-        <SwitchPreferenceCompat
-            app:allowDividerAbove="false"
-            app:allowDividerBelow="false"
-            app:iconSpaceReserved="false"
-            app:key="prohibit_screenshots"
-            app:defaultValue="false"
-            app:title="@string/prefs_prohibit_screenshots_title"
-            app:singleLineTitle="false"
-            app:summary="@string/prefs_prohibit_screenshots_summary" />
+<!--        <SwitchPreferenceCompat-->
+<!--            app:allowDividerAbove="false"-->
+<!--            app:allowDividerBelow="false"-->
+<!--            app:iconSpaceReserved="false"-->
+<!--            app:key="prohibit_screenshots"-->
+<!--            app:defaultValue="false"-->
+<!--            app:title="@string/prefs_prohibit_screenshots_title"-->
+<!--            app:singleLineTitle="false"-->
+<!--            app:summary="@string/prefs_prohibit_screenshots_summary" />-->
 
-    </PreferenceCategory>
+<!--    </PreferenceCategory>-->
 
     <PreferenceCategory
         app:iconSpaceReserved="false"
