AOO-5: added camera option to add images minor code cleanup

--- a/app/src/main/res/layout/fragment_add_media_dialog.xml
+++ b/app/src/main/res/layout/fragment_add_media_dialog.xml
@@ -6,8 +6,8 @@
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
     android:orientation="vertical"
-    android:paddingHorizontal="@dimen/activity_horizontal_margin"
-    android:paddingVertical="@dimen/activity_vertical_margin"
+    android:paddingHorizontal="8dp"
+    android:paddingTop="16dp"
     tools:context=".features.media.AddMediaDialogFragment">
 
     <TextView
@@ -17,26 +17,32 @@
         android:layout_gravity="center"
         android:text="@string/add_media_using"
         android:textFontWeight="700"
-        android:textStyle="bold"
-        tools:targetApi="p" />
+        android:textStyle="bold" />
 
-    <LinearLayout
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+
         android:layout_marginVertical="@dimen/activity_vertical_margin"
         android:orientation="horizontal">
 
         <com.google.android.material.card.MaterialCardView
-            android:id="@+id/photo_gallery"
-            android:layout_width="110dp"
-            android:layout_height="110dp"
+            android:id="@+id/photo_camera"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:background="?attr/selectableItemBackground"
             android:clickable="true"
             android:focusable="true"
             app:cardBackgroundColor="@color/colorBackground"
             app:cardCornerRadius="@dimen/activity_horizontal_margin"
             app:cardElevation="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/photo_gallery"
+            app:layout_constraintHorizontal_chainStyle="spread"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.29"
             app:strokeColor="@color/colorOnBackground"
             app:strokeWidth="@dimen/border_width">
 
@@ -46,11 +52,11 @@
                 android:layout_gravity="center"
                 android:background="@color/colorBackground"
                 android:orientation="vertical"
-                android:paddingHorizontal="@dimen/activity_horizontal_margin"
+                android:paddingHorizontal="8dp"
                 android:paddingVertical="@dimen/activity_vertical_margin">
 
                 <ImageView
-                    android:id="@+id/icon_photo_gallery"
+                    android:id="@+id/icon_photo_camera"
                     android:layout_width="32dp"
                     android:layout_height="32dp"
                     android:layout_gravity="center"
@@ -61,15 +67,71 @@
 
 
                 <TextView
+                    android:id="@+id/text_photo_camera"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:ellipsize="end"
+                    android:text="@string/camera"
+                    android:textAlignment="center"
+                    android:textFontWeight="700"
+                    android:textSize="14sp"
+                    app:layout_constraintWidth_percent="0.8" />
+
+            </LinearLayout>
+
+        </com.google.android.material.card.MaterialCardView>
+
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/photo_gallery"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="?attr/selectableItemBackground"
+            android:clickable="true"
+            android:focusable="true"
+            app:cardBackgroundColor="@color/colorBackground"
+            app:cardCornerRadius="@dimen/activity_horizontal_margin"
+            app:cardElevation="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/files"
+            app:layout_constraintHorizontal_chainStyle="spread"
+            app:layout_constraintStart_toEndOf="@+id/photo_camera"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.3"
+            app:strokeColor="@color/colorOnBackground"
+            app:strokeWidth="@dimen/border_width">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@color/colorBackground"
+                android:orientation="vertical"
+                android:paddingHorizontal="8dp"
+                android:paddingVertical="@dimen/activity_vertical_margin">
+
+                <ImageView
+                    android:id="@+id/icon_photo_gallery"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:layout_gravity="center"
+                    android:importantForAccessibility="no"
+                    android:padding="2dp"
+                    android:src="@drawable/ic_photo_library"
+                    app:tint="@color/colorPrimary" />
+
+
+                <TextView
                     android:id="@+id/text_photo_gallery"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:ellipsize="end"
                     android:text="@string/photo_gallery"
                     android:textAlignment="center"
                     android:textFontWeight="700"
                     android:textSize="14sp"
-                    tools:targetApi="p" />
+                    app:layout_constraintWidth_percent="0.8" />
 
             </LinearLayout>
 
@@ -77,15 +139,20 @@
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/files"
-            android:layout_width="110dp"
-            android:layout_height="110dp"
-            android:layout_marginStart="@dimen/activity_vertical_margin"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:background="?attr/selectableItemBackground"
             android:clickable="true"
             android:focusable="true"
             app:cardBackgroundColor="@color/colorBackground"
             app:cardCornerRadius="@dimen/activity_horizontal_margin"
             app:cardElevation="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_chainStyle="spread"
+            app:layout_constraintStart_toEndOf="@+id/photo_gallery"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.3"
             app:strokeColor="@color/colorOnBackground"
             app:strokeWidth="@dimen/border_width">
 
@@ -94,7 +161,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:orientation="vertical"
-                android:paddingHorizontal="@dimen/activity_horizontal_margin"
+                android:paddingHorizontal="8dp"
                 android:paddingVertical="@dimen/activity_vertical_margin">
 
                 <ImageView
@@ -107,22 +174,24 @@
                     android:src="@drawable/ic_folder"
                     app:tint="@color/colorPrimary" />
 
-
                 <TextView
                     android:id="@+id/text_files"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:ellipsize="end"
                     android:text="@string/files"
                     android:textAlignment="center"
                     android:textFontWeight="700"
                     android:textSize="14sp"
+                    app:layout_constraintWidth_percent="0.8"
                     tools:targetApi="p" />
+
 
             </LinearLayout>
 
         </com.google.android.material.card.MaterialCardView>
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
