AOO-3: added licensing options to Add/Edit Server Views Removed licensing options from Add/Edit folder section copied ui stuff from new android app

--- a/app/src/main/res/layout/activity_create_new_folder.xml
+++ b/app/src/main/res/layout/activity_create_new_folder.xml
@@ -48,7 +48,9 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
+<!--    This is hidden since we are gonna set Creative Commons License in folder level-->
     <RelativeLayout
+        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginVertical="@dimen/activity_vertical_margin"
