--- a/app/src/main/res/layout/activity_space_setup.xml
+++ b/app/src/main/res/layout/activity_space_setup.xml
@@ -22,7 +22,8 @@
             android:id="@+id/space_setup_fragment"
             android:name="net.opendasharchive.openarchive.features.settings.SpaceSetupFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            tools:layout="@layout/fragment_webdav_setup_license"/>
 
     </LinearLayout>
 </ScrollView>
