--- a/app/src/main/res/layout/activity_webdav.xml
+++ b/app/src/main/res/layout/activity_webdav.xml
@@ -13,30 +13,24 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
+        android:focusable="false"
         android:theme="@style/ThemeOverlay.AppCompat.DayNight.ActionBar"
-        app:title="@string/private_server"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:title="@string/private_server" />
 
-    <ScrollView
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/web_dav_fragment"
+        android:name="net.opendasharchive.openarchive.services.webdav.WebDavFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
+        tools:layout="@layout/fragment_web_dav"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar">
-
-        <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/web_dav_fragment"
-            android:name="net.opendasharchive.openarchive.services.webdav.WebDavFragment"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-    </ScrollView>
+        app:layout_constraintTop_toBottomOf="@id/toolbar" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
