--- a/app/src/main/res/layout/activity_folders.xml
+++ b/app/src/main/res/layout/activity_folders.xml
@@ -13,7 +13,9 @@
         android:layout_height="?attr/actionBarSize"
         android:theme="@style/ThemeOverlay.AppCompat.DayNight.ActionBar" />
 
+<!--    Hiding Creating Commons Licensing section from Folder List view-->
     <RelativeLayout
+        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginVertical="@dimen/activity_vertical_margin">
