--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -8,7 +8,7 @@
     <color name="colorOnPrimary">@color/white</color>
     <color name="colorPrimary">@color/c23_teal</color>
     <color name="colorPrimaryDark">@color/c23_teal_40</color>
-
+    <color name="colorText">@color/c23_light_grey</color>
     <color name="colorBottomNavbar">@color/c23_darker_grey</color>
     <color name="colorOnBottomNavbar">@color/white</color>
     <color name="colorAddButton">@color/colorPrimary</color>
@@ -18,6 +18,21 @@
     <color name="colorSpaceSetupProgressOn">@color/c23_teal</color>
     <color name="colorSpaceSetupProgressOff">@color/c23_medium_grey</color>
     <color name="colorBackgroundSpaceIcon">@color/c23_darker_grey</color>
+    <color name="colorButtonOnBackground">@color/black</color>
+    <color name="colorOnBackgroundTonedDown">@color/c23_grey</color>
+    <color name="colorOnBackgroundLowContrast">@color/c23_medium_grey</color>
+    <color name="colorTextViewHint">@color/white</color>
+    <color name="colorSectionHeader">#00B4A6</color>
+    <color name="tabBarMenuButton">@color/c24_cream_95</color>
+    <color name="colorPill">@color/c23_dark_grey</color>
+    <color name="dragHandle">@color/c23_grey</color>
+    <color name="splashBackground">#151515</color>
+    <color name="swipeBackground">@color/black</color>
+    <color name="colorBackendButton">@color/black</color>
+    <color name="colorBackendButtonInactive">@color/c23_dark_grey</color>
+    <color name="colorBackendButtonBorder">@color/c23_teal</color>
+    <color name="colorRipple">#33e3e3e4</color>
+    <color name="bottomSheetBackground">@color/eigengrau</color>
+    <color name="colorSkipButton">@color/c23_teal</color>
 
-    <color name="colorPill">#434343</color>
 </resources>
